$Id$

2021-01-24  Christian Franke  <franke@computer.org>

	Drop C++98 restriction, allow C++11.
	configure.ac: Enable C++11.  Fail if no option found.
	Disable C++14 if possible.  Warn if no C++14 option found.

	configure.ac: Remove defunct '--with-working-snprintf'.

	scsiprint.cpp: Reduce scope of 'powerlimit'
	(cppcheck 1.85: variableScope).

2021-01-24  Simon Fairweather  <simon.n.fairweather@gmail.com>

	scsiprint.cpp: Move VPD page process to after new powermode processing
	added in r5131 to resolve #1413 of Seagate drives spinning up when
	-n standby is selected.  Simplify code for VPD pages.

2021-01-23  Christian Franke  <franke@computer.org>

	Makefile.am: Enhance config-vc and *clean-vc targets for MSVC15/16.

	os_win32/vc16: Copy from vc15 and change for MSVC16 (VS2019).

	os_win32/vc15: Copy from vc14 and change for MSVC15 (VS2017).

	os_win32/vc14/smart*.vcxproj*: Add missing files.
	Suppress warnings for regex/regex.c.

2021-01-20  Christian Franke  <franke@computer.org>

	ataprint.cpp, ataprint.h, smartctl.cpp: Rework sct_erc variables.
	Fix handling of '-l scterc*,p' if both get and set are used.

	smartctl.cpp: Change '-l scterc,r' to '-l scterc,reset'.
	Make ',p' case sensitive.  Simplify parsing of 'scterc...'.
	smartctl.8.in: Change documentation accordingly.

2021-01-17  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Bump branch VERSION to 7.3.
	- USB: Realtek RTL9211 (0x0bda:0x9211, 0x2eb9:0x9211).
	- USB: ASMedia ASM2362 (0x174c:0x2362).

	scsinvme.cpp: Add '-d sntasmedia' device type for ASMedia ASM2362
	USB to NVMe bridges (#1221).
	dev_interface.cpp: Update help text.
	smartctl.8.in, smartd.conf.5.in: Document new option.

	Thanks to Demian from Sabrent.

2021-01-15  Christian Franke  <franke@computer.org>

	smartctl.8.in: Add EXPERIMENTAL note for new '-l scterc' variants.

2021-01-15  Jeremy Bauer  <jeremy.bauer@wdc.com>

	Add support for SCT Error Recovery Timer features added in ACS-4
	(#1427).