@@ -1,7 +1,7 @@
 /*
  * scsiprint.h
  *
- * Home page of code is: http://www.smartmontools.org
+ * Home page of code is: https://www.smartmontools.org
  *
  * Copyright (C) 2002-9 Bruce Allen
  * Copyright (C) 2000 Michael Cornwell <cornwell@acm.org>
@@ -21,57 +21,34 @@
 // Options for scsiPrintMain
 struct scsi_print_options
 {
-  bool drive_info;
-  bool smart_check_status;
-  bool smart_vendor_attrib;
-  bool smart_error_log;
-  bool smart_selftest_log;
-  bool smart_background_log;
-  bool smart_ss_media_log;
+  bool drive_info = false;
+  bool smart_check_status = false;
+  bool smart_vendor_attrib = false;
+  bool smart_error_log = false;
+  bool smart_selftest_log = false;
+  bool smart_background_log = false;
+  bool smart_ss_media_log = false;
 
-  bool smart_disable, smart_enable;
-  bool smart_auto_save_disable, smart_auto_save_enable;
+  bool smart_disable = false, smart_enable = false;
+  bool smart_auto_save_disable = false, smart_auto_save_enable = false;
 
-  bool smart_default_selftest;
-  bool smart_short_selftest, smart_short_cap_selftest;
-  bool smart_extend_selftest, smart_extend_cap_selftest;
-  bool smart_selftest_abort;
-  bool smart_selftest_force; // Ignore already running test
+  bool smart_default_selftest = false;
+  bool smart_short_selftest = false, smart_short_cap_selftest = false;
+  bool smart_extend_selftest = false, smart_extend_cap_selftest = false;
+  bool smart_selftest_abort = false;
+  bool smart_selftest_force = false; // Ignore already running test
 
-  bool sasphy, sasphy_reset;
+  bool sasphy = false, sasphy_reset = false;
   
-  bool get_wce, get_rcd;
-  short int set_wce, set_rcd;  // disable(-1), enable(1) cache
+  bool get_wce = false, get_rcd = false;
+  short int set_wce = 0, set_rcd = 0;  // disable(-1), enable(1) cache
 
-  unsigned char powermode; // Enhancement Skip check, if disk in idle or standby mode
-  unsigned char powerexit; // exit() code for low power mode
+  unsigned char powermode = 0;  // Enhancement Skip check, if disk in idle or standby mode
+  unsigned char powerexit = 0;  // exit() code for low power mode
 
-  int set_standby;         // set(1..255->0..254) standby timer
-  bool set_standby_now;    // set drive to standby
-  bool set_active;         // set drive to active
-
-  scsi_print_options()
-    : drive_info(false),
-      smart_check_status(false),
-      smart_vendor_attrib(false),
-      smart_error_log(false),
-      smart_selftest_log(false),
-      smart_background_log(false),
-      smart_ss_media_log(false),
-      smart_disable(false), smart_enable(false),
-      smart_auto_save_disable(false), smart_auto_save_enable(false),
-      smart_default_selftest(false),
-      smart_short_selftest(false), smart_short_cap_selftest(false),
-      smart_extend_selftest(false), smart_extend_cap_selftest(false),
-      smart_selftest_abort(false),
-      smart_selftest_force(false),
-      sasphy(false), sasphy_reset(false),
-      get_wce(false), get_rcd(false),
-      set_wce(0), set_rcd(0),
-      powermode(0), powerexit(0), // Power Check -n enhancement option
-      set_standby(0), set_standby_now(false), // enable Standby options for -s
-      set_active(false)
-    { }
+  int set_standby = 0;          // set(1..255->0..254) standby timer
+  bool set_standby_now = false; // set drive to standby
+  bool set_active = false;      // set drive to active
 };
 
 int scsiPrintMain(scsi_device * device, const scsi_print_options & options);
