@@ -2,6 +2,9 @@ $Id$
 
 2021-01-24  Christian Franke  <franke@computer.org>
 
+	ataprint.h, nvmeprint.h, scsiprint.h: Use C++11 in-class member
+	initializers.
+
 	Drop C++98 restriction, allow C++11.
 	configure.ac: Enable C++11.  Fail if no option found.
 	Disable C++14 if possible.  Warn if no C++14 option found.
